--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
-  <body>
-    <header>
-      <nav>
+  <body class="styles">
+    <header class="head">
+      <nav class="head-nav">
         <ul>
           <li><a href="/lifestyle">LIFESTYLE</a></li>
           <li><a href="/photodiary">PHOTODIARY</a></li>
@@ -18,11 +19,11 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="articles">
         <ul>
           <li>
             <img src="images/image-1.png" alt="lifestyle" />
-            <p>LIFESTYLE</p>
+            <p class="paragraph">LIFESTYLE</p>
             <h2>More than jast a musical festival</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -34,9 +35,9 @@
           </li>
           <li>
             <img src="images/image-2.png" alt="lifestyle" />
-            <p>LIFESTYLE</p>
+            <p class="paragraph">LIFESTYLE</p>
             <h2>Life tastes better with coffee</h2>
-            <p>
+            <p class="text">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Perspiciatis sit, est officia laudantium temporibus dignissimos
               minima itaque ullam hic, libero ea, vitae quidem consequatur dicta
@@ -46,9 +47,21 @@
           </li>
           <li>
             <img src="images/image-3.png" alt="photodiary" />
-            <p>PHOTODIARY</p>
+            <p class="paragraph">PHOTODIARY</p>
             <h2>American dream</h2>
-            <p>
+            <p class="text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Perspiciatis sit, est officia laudantium temporibus dignissimos
+              minima itaque ullam hic, libero ea, vitae quidem consequatur dicta
+              reprehenderit nesciunt dolore dolorem harum placeat pariatur. Modi
+              aperiam obcaecati velit in illum a mollitia.
+            </p>
+          </li>
+          <li class="alps">
+            <img src="images/image-4.png" alt="photodiary" />
+            <p class="paragraph">PHOTODIARY</p>
+            <h2>A day exploring the Alps</h2>
+            <p class="text">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Perspiciatis sit, est officia laudantium temporibus dignissimos
               minima itaque ullam hic, libero ea, vitae quidem consequatur dicta
@@ -58,17 +71,27 @@
           </li>
           <li>
             <img src="images/image-4.png" alt="photodiary" />
-            <p>PHOTODIARY</p>
-            <h2>A day exploring the Alps</h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Perspiciatis sit, est officia laudantium temporibus dignissimos
-              minima itaque ullam hic, libero ea, vitae quidem consequatur dicta
-              reprehenderit nesciunt dolore dolorem harum placeat pariatur. Modi
-              aperiam obcaecati velit in illum a mollitia.
+            <p class="paragraph">LIFESTYLE</p>
+            <h2>Top 10 song for running</h2>
+            <p class="text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
             </p>
           </li>
-          <button type="submit">Load more</button>
+          <li>
+            <img src="images/image-4.png" alt="photodiary" />
+            <p class="paragraph">LIFESTYLE</p>
+            <h2>Cold winter days</h2>
+            <p class="text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </li>
+          <button type="submit" class="button">Load more</button>
         </ul>
       </section>
     </main>
