--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Playfair+Display|Ubuntu:300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Document</title>
+    <title>My lifestyle</title>
   </head>
-  <body class="styles">
-    <header class="head">
-      <nav class="head-nav">
+  <body>
+    <header>
+      <nav class="site-nav">
         <ul>
-          <li><a href="/lifestyle">LIFESTYLE</a></li>
-          <li><a href="/photodiary">PHOTODIARY</a></li>
-          <li><a href="/music">MUSIC</a></li>
-          <li><a href="/travel">TRAVEL</a></li>
+          <li><a href="/lifestyle" class="link">lifestyle</a></li>
+          <li><a href="/photodiary" class="link">photodiary</a></li>
+          <li><a href="/music" class="link">music</a></li>
+          <li><a href="/travel" class="link">travel</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section class="articles">
-        <ul>
-          <li>
-            <img src="images/image-1.png" alt="lifestyle" />
-            <p class="paragraph">LIFESTYLE</p>
-            <h2>More than jast a musical festival</h2>
-            <p>
+      <section>
+        <ul class="articles">
+          <li class="list">
+            <img src="images/mockup1.jpg" alt="lifestyle" width="420" />
+            <p class="paragraph">lifestyle</p>
+            <h2 class="title">More than jast a musical festival</h2>
+            <p class="description">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Perspiciatis sit, est officia laudantium temporibus dignissimos
               minima itaque ullam hic, libero ea, vitae quidem consequatur dicta
@@ -33,11 +37,11 @@
               aperiam obcaecati velit in illum a mollitia.
             </p>
           </li>
-          <li>
-            <img src="images/image-2.png" alt="lifestyle" />
-            <p class="paragraph">LIFESTYLE</p>
-            <h2>Life tastes better with coffee</h2>
-            <p class="text">
+          <li class="list">
+            <img src="images/mockup2.jpg" alt="lifestyle" width="419" />
+            <p class="paragraph">lifestyle</p>
+            <h2 class="title">Life tastes better with coffee</h2>
+            <p class="description">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Perspiciatis sit, est officia laudantium temporibus dignissimos
               minima itaque ullam hic, libero ea, vitae quidem consequatur dicta
@@ -45,11 +49,11 @@
               aperiam obcaecati velit in illum a mollitia.
             </p>
           </li>
-          <li>
-            <img src="images/image-3.png" alt="photodiary" />
-            <p class="paragraph">PHOTODIARY</p>
-            <h2>American dream</h2>
-            <p class="text">
+          <li class="list">
+            <img src="images/mockup3.jpg" alt="photodiary" width="420" />
+            <p class="paragraph">photodiary</p>
+            <h2 class="title">American dream</h2>
+            <p class="description">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Perspiciatis sit, est officia laudantium temporibus dignissimos
               minima itaque ullam hic, libero ea, vitae quidem consequatur dicta
@@ -57,11 +61,11 @@
               aperiam obcaecati velit in illum a mollitia.
             </p>
           </li>
-          <li class="alps">
-            <img src="images/image-4.png" alt="photodiary" />
-            <p class="paragraph">PHOTODIARY</p>
-            <h2>A day exploring the Alps</h2>
-            <p class="text">
+          <li class="list">
+            <img src="images/mockup4.jpg" alt="photodiary" width="419" />
+            <p class="paragraph">photodiary</p>
+            <h2 class="title">A day exploring the Alps</h2>
+            <p class="description">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Perspiciatis sit, est officia laudantium temporibus dignissimos
               minima itaque ullam hic, libero ea, vitae quidem consequatur dicta
@@ -69,22 +73,22 @@
               aperiam obcaecati velit in illum a mollitia.
             </p>
           </li>
-          <li>
-            <img src="images/image-4.png" alt="photodiary" />
-            <p class="paragraph">LIFESTYLE</p>
-            <h2>Top 10 song for running</h2>
-            <p class="text">
+          <li class="list">
+            <img src="images/mockup5.jpg" alt="photodiary" width="420" />
+            <p class="paragraph">lifestyle</p>
+            <h2 class="title">Top 10 song for running</h2>
+            <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea
             </p>
           </li>
-          <li>
-            <img src="images/image-4.png" alt="photodiary" />
-            <p class="paragraph">LIFESTYLE</p>
-            <h2>Cold winter days</h2>
-            <p class="text">
+          <li class="list">
+            <img src="images/mockup6.jpg" alt="photodiary" width="419" />
+            <p class="paragraph">lifestyle</p>
+            <h2 class="title">Cold winter days</h2>
+            <p class="description">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
